# resources

./: .gitignore  .gitmodules  CLAUDE.md  git-help.md
Ansible/: "#{AnsibleLogPath}#"  #{AnsibleLogOutputPath}#  .ansible-lint  (+15 more)
Projects/vinted-bot/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Projects/vinted-bot/scripts/: deploy-nas.sh  deploy-to-nas.sh  explore-api.py  live-bump-commit.py  live-bump-prepare.py  migrate-to-multi-compte.sh  probe-item-detail.py  run-optimizer-all.sh  run-optimizer-apply.sh  test-bumper-logic.py  test-client.py  test-cookies.py  test-infra.sh  test-optimizer-llm.py  test-scheduler.py  test-transformer.py
Projects/vinted-bot/src/vinted_bot/: __init__.py  config.py  db.py  log.py
Projects/vinted-bot/src/vinted_bot/bumper/: __init__.py  runner.py  scheduler.py  seasonal.py  selector.py
Projects/vinted-bot/src/vinted_bot/crosspost/: __init__.py  mapper.py  runner.py
Projects/vinted-bot/src/vinted_bot/notif/: __init__.py  sender.py
Projects/vinted-bot/src/vinted_bot/optimizer/: __init__.py  llm.py  prompts.py  proposals.py  runner.py  wol.py
Projects/vinted-bot/src/vinted_bot/photos/: __init__.py  transformer.py
Projects/vinted-bot/src/vinted_bot/vinted/: __init__.py  client.py  endpoints.py  errors.py  models.py
Projects/vinted-bot/src/vinted_bot/webui/: __init__.py  server.py
Projects/vinted-bot/src/vinted_bot/webui/templates/: _card.html  _card_edit.html  base.html  dashboard.html  proposals.html
Projects/vinted-bot/userscript/: leboncoin-prefill.user.js
(+495 files in other folders)
